# eclipsa-audio-plugin

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
audioelementplugin/: CMakeLists.txt
audioelementplugin/src/: AudioElementPluginEditor.cpp  AudioElementPluginEditor.h  AudioElementPluginProcessor.cpp
cmake/: boost.cmake  copy_resources.cmake  deploy_runtime_deps.cmake  eclipsa_build_tests.cmake  eclipsa_plugin_defaults.cmake  eclipsa_test.cmake  pffft.cmake
cmake/prebuiltLibs/: macos.cmake  windows.cmake
cmake/toolchains/: macos.cmake  windows.cmake
common/: CMakeLists.txt
common/components/src/: AudioFilePlayer.cpp  AudioFilePlayer.h  ExportValidation.h  SelectionBox.h  TitledTextBox.h
common/components/src/ambisonics_visualizers/: AmbisonicsVisualizer.cpp  AmbisonicsVisualizer.h
common/data_structures/src/: AudioElementPluginSyncClient.h  FileExport.cpp  FileExport.h  FilePlayback.cpp  FilePlayback.h  FilePlaybackProcessorData.h  TimeFormatConverter.cpp  TimeFormatConverter.h
common/logger/: logger.h
common/logger/tests/: Logger_test.cpp
common/player/src/transport/: BackgroundBuffer.cpp  BackgroundBuffer.h  IAMFDecoderSource.cpp  IAMFDecoderSource.h  PbRingBuffer.h
common/processors/: processors.cpp  processors.h
common/processors/file_output/: FileOutputProcessor.cpp  FileOutputProcessor.h  FileOutputProcessor_PremierePro.cpp  FileOutputProcessor_PremierePro.h  WavFileOutputProcessor.cpp  WavFileOutputProcessor.h
common/processors/file_output/iamf_export_utils/: IAMFExportUtil.cpp  IAMFExportUtil.h  IAMFFileReader.cpp  IAMFFileReader.h  IAMFFileWriter.cpp  IAMFFileWriter.h
common/processors/file_playback/: FilePlaybackProcessor.cpp  FilePlaybackProcessor.h  FilePlaybackResampler.h  FilePlaybackTasks.h  FilePlaybackWorker.h  IAMFBufferedReader.cpp  IAMFBufferedReader.h
common/processors/loudness_export/: LoudnessExportProcessor.cpp  LoudnessExportProcessor.h
common/processors/mix_monitoring/loudness_standards/: MeasureEBU128.cpp  MeasureEBU128.h  TruePeak.cpp  TruePeak.h
common/processors/render/: RenderProcessor.cpp
common/processors/tests/: CMakeLists.txt  FileOutputProcessor_PremierePro_test.cpp  FileOutputProcessor_test.cpp  FileOutputTestFixture.h  FileOutputTestUtils.h  FilePlaybackProcessor_test.cpp  FilePlaybackResampler_test.cpp  FilePlaybackWorker_test.cpp  IAMFBufferedReader_test.cpp  IAMFFileReader_test.cpp  LoudnessExportProcessor_test.cpp  MP4IAMFDemuxer_test.cpp  PbRingBuffer_test.cpp
common/processors/tests/test_resources/: Invalid.iamf
rendererplugin/: CMakeLists.txt
rendererplugin/src/: RendererEditor.cpp  RendererEditor.h  RendererProcessor.cpp  RendererProcessor.h
rendererplugin/src/screens/: ElementRoutingScreen.cpp  ElementRoutingScreen.h  FileExportScreen.cpp  FileExportScreen.h  MonitorScreen.h  RoomMonitoringScreen.cpp  RoomMonitoringScreen.h
